fixed overflow page issue once and for all

--- a/styles/about.css
+++ b/styles/about.css
@@ -35,7 +35,8 @@
     align-items: center;
     justify-content: center;
     width: 80vw;
-    max-width: 600px;
+    max-width: min(600px, 100%); /* won't exceed viewport */
+    overflow: hidden;
     max-height: 400px;
     color: whitesmoke;
     border: solid;
@@ -97,20 +98,13 @@
 
 .contact-info{
     
-    font-size: 20px;
+    font-size: 16px;
     color:whitesmoke;
     text-decoration: none;
     transition: font-weight .5s;
     overflow-wrap: break-word;
 }
-@media (max-width: 400px) {
-    .contact-box {
-        font-size: 20px;
-    }
-    .contact-info, .address {
-        font-size: 15px;
-    }
-}
+
 .contact-info:hover{
     font-weight: bold;
 }
@@ -127,4 +121,15 @@
 }
 .address:hover{
     font-weight: bold;
+}
+
+.display-image-left,
+.display-image-right {
+    display: none;
+}
+
+.display-image-main {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
