--- a/styles/menu.css
+++ b/styles/menu.css
@@ -143,3 +143,14 @@
     cursor: pointer;
     transform: scale(1.2);
 }
+
+.display-image-left,
+.display-image-right {
+    display: none;
+}
+
+.display-image-main {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
